src/components/Terminal/terminal.css
@font-face {
    font-family: 'Expletus Sans';
    src: url('../../assets/fonts/ExpletusSans-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

.terminal {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100vh;
    overflow-y: auto;
    background-color: #000;
    color: #C4C4C4;
    padding: 35px 45px;
    font-size: 14px;
    line-height: 1.42;
    font-family: 'Expletus Sans', 'IBM Plex Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
}

.terminal__line {
    line-height: 2;
    white-space: pre-wrap;
}

.terminal__prompt {
    display: flex;
    align-items: center;
}

.terminal__prompt__label {
    flex: 0 0 auto;
    color: #EBB02D;
}

.terminal__prompt__input {
    flex: 1;
    margin-left: 1rem;
    display: flex;
    align-items: center;
    color: white;
}

.terminal__prompt__input input {
    flex: 1;
    width: 100%;
    background-color: transparent;
    color: white;
    border: 0;
    outline: none;
    font-size: 14px;
    line-height: 1.42;
    font-family: 'Expletus Sans', 'IBM Plex Mono', Consolas, Menlo, Monaco, 'Courier New', Courier, monospace;
}

.terminal__system {
    color: #FF4500;
}

.terminal__assistant {
    color: #4FC0D0;
}

.terminal__user {
    color: #F24C3D;
}

.terminal__user-label {
    color: #F9EF00;
}

.terminal__assistant-label {
    color: #F9EF00;
}

.terminal__user-label::after, .terminal__assistant-label::after {
    content: " ";
}

